--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
-# 
+# Mimic
+data_mimic/ 
 
 # Output data
 results/
